fixing bug with links not showing up, removing unneeded tag

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -19,6 +19,3 @@
       list-style-position: inside;
   }
 }
-a:hover{
-
-}
