--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -15,9 +15,9 @@ body {
     font-weight: 300;
 }
 a ,a:hover, a:focus{ 
-    color: inherit !important;
-    text-decoration: none !important;
-    outline:none !important;
+    color: inherit;
+    text-decoration: none;
+    outline:none;
 }
 .clear { clear: both; }
 .ui-tabs-hide { display: none; }
